--- a/organisms/footers/footers.html
+++ b/organisms/footers/footers.html
@@ -2,16 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Navigation | Delta Design System</title>
+    <title>Footers | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
-    <style>
-      p > code {white-space: normal;}
-    </style>
   </head>
   <body data-aos="fade-in">
     <header>
@@ -33,10 +30,9 @@
     </header>
     <main>
       <section class="introduction row wide">
-        <h1 class="title">Navigation</h1>
-        <p>The &lt;nav&gt; element represents a section of a page whose purpose is to provide navigation links, either within the current document or to other documents. Common examples of navigation sections are menus, tables of contents, and indexes.</p>
-        <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav" target="_blank">&lt;nav&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
-        <p>According to the <a href="https://a11y-style-guide.com/style-guide/section-navigation.html#kssref-navigation-navigation-basic" target="_blank">A11Y Style Guide</a>, all navigation elements should be inside a <code>&lt;nav&gt;</code> tag. Furthermore, menus should be labeled according to their individual function. The Delta Design System features a <code>&lt;nav&gt;</code> in the <code>&lt;header&gt;</code> and <code>&lt;footer&gt;</code> and uses <code>aria-labelledby="header-navigation"</code> and <code>aria-labelledby="footer-navigation"</code> to provide context and improve accessibility.</p>
+        <h1 class="title">Footers</h1>
+        <p>The &lt;footer&gt; element represents a footer for its nearest sectioning content or sectioning root element. A footer typically contains information about the author of the section, copyright data or links to related documents.</p>
+        <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer" target="_blank">&lt;footer&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/footer$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
       </section>
     </main>
     <footer>
