--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
     <style>
@@ -100,8 +100,8 @@
           <li>Avoid using <code>&lt;h1&gt;</code> more than once on a page</li>
         </ul>
       </section>
-      <section class="typography-styles row wide">
-        <h2>Typography Styles</h2>
+      <section class="typography-specimens row wide">
+        <h2>Typography Specimens</h2>
         <figure class="column">
           <figcaption>h1 title</figcaption>
           <p class="header-one title">A quick brown fox jumps over the lazy dog.</p>
