--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -64,7 +64,11 @@
           <li>Line width</li>
         </ul>
         <h2>Font Family</h2>
-        <p>The Delta Design System uses <a href="https://fonts.google.com/specimen/Ovo" target="_blank">Ovo</a> as our headline font family and <a href="https://fonts.google.com/specimen/Montserrat" target="_blank">Montserrat</a> as our body copy and all-purpose font family. The font weights we use for each depend on the use case, but are intended to provide the most legible option for each situation.</p>
+        <p>The Delta Design System uses <a href="https://fonts.google.com/specimen/Ovo" target="_blank">Ovo</a> as our headline font family and <a href="https://fonts.google.com/specimen/Montserrat" target="_blank">Montserrat</a> as our body copy and all-purpose font family. The font weights we use for each depend on the use case, but are intended to provide the most legible option for each situation. We use the following Sass declarations in our style sheets to set the font-family:</p>
+        <ul>
+          <li><code>$font-head</code></li>
+          <li><code>$font-body</code></li>
+        </ul>
         <h2>Font Size</h2>
         <p>Font size is another established part of the system we use to provide a subtle but powerful consistency and rhythm to the way in which different aspects of our typography renders at multiple screen sizes. We utilize a <a href="https://type-scale.com/" target="_blank">type scale</a> to help enable this consistency.</p>
         <ul>
@@ -91,7 +95,7 @@
           <li><code>&lt;p&gt;</code> for body copy</li>
           <li><code>&lt;ol&gt;</code> and <code>&lt;ul&gt;</code> for ordered and unordered lists</li>
           <li><code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, and <code>&lt;bold&gt;</code> for importance and emphasis. Please consult the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong#Usage_notes" target="_blank">Usage notes</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong$history" target="_blank">Mozilla Contributors</a> for more detail on how to use <code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, and <code>&lt;bold&gt;</code>.</li>
-          <li>All text is left-aligned by default. You can change the horizontal alignment of text by adding either a <code>center</code> or <code>right</code> class to any text element.</li>
+          <li>All text is left-aligned by default. You can change the horizontal alignment of text by adding either a <code>.center</code> or <code>.right</code> class to any text element.</li>
         </ul>
         <p>Also, here are a couple of things to avoid:</p>
         <ul>
@@ -136,7 +140,7 @@
         </figure>
         <figure class="column">
           <figcaption>ul</figcaption>
-          <ul style="padding: 0.5rem 0 0.8rem 1.5rem;">
+          <ul style="padding: 0.5rem 0 0 1.5rem;">
             <li>A quick brown fox jumps over the lazy dog.</li>
             <li>A quick brown fox jumps over the lazy dog.</li>
           </ul>
