Layout complete; updates to headers, footers, navigation, and typography
First pass of layout page is complete; made some modest updates to headers, footers, navigation, and typography based on work on layout page.

--- a/molecules/navigation/navigation.html
+++ b/molecules/navigation/navigation.html
@@ -40,7 +40,7 @@
       </section>
     </main>
     <footer>
-      <div class="row golden left">
+      <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
             <li><a href="../../index.html">Overview</a></li>
