--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -66,8 +66,8 @@
         <h2>Font Family</h2>
         <p>The Delta Design System uses <a href="https://fonts.google.com/specimen/Ovo" target="_blank">Ovo</a> as our headline font family and <a href="https://fonts.google.com/specimen/Montserrat" target="_blank">Montserrat</a> as our body copy and all-purpose font family. The font weights we use for each depend on the use case, but are intended to provide the most legible option for each situation. We use the following Sass declarations in our style sheets to set the font-family:</p>
         <ul>
-          <li><code>$font-head</code></li>
-          <li><code>$font-body</code></li>
+          <li><code>font-family: $font-head</code></li>
+          <li><code>font-family: $font-body</code></li>
         </ul>
         <h2>Font Size</h2>
         <p>Font size is another established part of the system we use to provide a subtle but powerful consistency and rhythm to the way in which different aspects of our typography renders at multiple screen sizes. We utilize a <a href="https://type-scale.com/" target="_blank">type scale</a> to help enable this consistency.</p>
@@ -148,7 +148,7 @@
       </section>
     </main>
     <footer>
-      <div class="row golden left">
+      <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
             <li><a href="../../index.html">Overview</a></li>
