--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -101,7 +101,6 @@
         <ul>
           <li>Do not skip heading levels: always start from <code>&lt;h1&gt;</code>, then <code>&lt;h2&gt;</code> and so on. Semantic headings use are part of the document outline and proper use is critical for adaptive technologies. </li>
           <li>Do not use heading tags to resize text. Use CSS for general-purpose resizing.</li>
-          <li>Avoid using <code>&lt;h1&gt;</code> more than once on a page</li>
         </ul>
       </section>
       <section class="typography-specimens row wide">
@@ -148,6 +147,7 @@
       </section>
     </main>
     <footer>
+      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
