--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Headers | Delta Design System</title>
+    <title>Downloads | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
-    <link href="../../css/master.css" rel="stylesheet">
+    <link href="../css/master.css" rel="stylesheet">
   </head>
   <body data-aos="fade-in">
     <header>
@@ -19,34 +19,27 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul>
-          <li><a href="../../index.html">Overview</a></li>
-          <li><a href="../../atoms/atoms.html">Atoms</a></li>
-          <li><a href="../../molecules/molecules.html">Molecules</a></li>
-          <li><a href="../../organisms/organisms.html">Organisms</a></li>
-          <li><a href="../../style/style.html">Style</a></li>
-          <li><a href="../../downloads/downloads.html">Downloads</a></li>
+          <li><a href="../index.html">Overview</a></li>
+          <li><a href="../atoms/atoms.html">Atoms</a></li>
+          <li><a href="../molecules/molecules.html">Molecules</a></li>
+          <li><a href="../organisms/organisms.html">Organisms</a></li>
+          <li><a href="../style/style.html">Style</a></li>
+          <li>Downloads</li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section class="introduction row wide">
-        <h1 class="title">Headers</h1>
-        <p>The &lt;header&gt; element represents introductory content, typically a group of introductory or navigational aids. It may contain some heading elements but also a logo, a search form, an author name, and other elements.</p>
-        <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header" target="_blank">&lt;header&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
-        <p>The Delta Design System uses the <a href="https://wicky.nillia.ms/headroom.js/" target="_blank">Headroom</a> JavaScript widget to slide the header (and the header navigation) out of view when users scroll down, and then slide it back into view whenever the user scrolls up. This enables us to bring the header into view when appropriate and give focus to our content the rest of the time.</p>
-      </section>
-    </main>
+    <main></main>
     <footer>
       <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
-            <li><a href="../../index.html">Overview</a></li>
-            <li><a href="../../atoms/atoms.html">Atoms</a></li>
-            <li><a href="../../molecules/molecules.html">Molecules</a></li>
-            <li><a href="../../organisms/organisms.html">Organisms</a></li>
-            <li><a href="../../style/style.html">Style</a></li>
-            <li><a href="../../downloads/downloads.html">Downloads</a></li>
+            <li><a href="../index.html">Overview</a></li>
+            <li><a href="../atoms/atoms.html">Atoms</a></li>
+            <li><a href="../molecules/molecules.html">Molecules</a></li>
+            <li><a href="../organisms/organisms.html">Organisms</a></li>
+            <li><a href="../style/style.html">Style</a></li>
+            <li>Downloads</li>
           </ul>
         </nav>
         <section class="meta-content column">
@@ -68,7 +61,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="../../assets/scripts/site.js"></script>
+    <script src="../assets/scripts/site.js"></script>
     <script>
       AOS.init({duration: 600});
     </script>
