--- a/molecules/navigation/navigation.html
+++ b/molecules/navigation/navigation.html
@@ -40,6 +40,7 @@
       </section>
     </main>
     <footer>
+      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
