--- a/organisms/footers/footers.html
+++ b/organisms/footers/footers.html
@@ -36,6 +36,7 @@
       </section>
     </main>
     <footer>
+      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
