--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -42,6 +42,24 @@
           <li>Never set link <code>:focus</code> states to <code>outline: none</code>.</li>
         </ul>
       </section>
+      <section class="color-styles row wide">
+        <h2>Color Styles</h2>
+        <figure>
+          <figcaption>scss</figcaption>
+<pre><code>$black: #000000;
+$white: #ffffff;
+$dk-gray: #5b5e6b;
+$lt-gray: #e4e8ed;
+$error: #c00c00;
+$valid: #008000;
+$dark-blue: #003442;
+$pale-blue: #4f7272;
+$crimson: #df3a32;
+$cream: #e9eae9;
+$primary: #df3a32;
+$secondary: #003442;</code></pre>
+        </figure>
+      </section>
     </main>
     <footer>
       <h1>Footer</h1>
