--- a/style/style.html
+++ b/style/style.html
@@ -28,7 +28,16 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="style row wide">
+        <h1>Style</h1>
+        <ul>
+          <li><a href="colors/colors.html">Colors</a></li>
+          <li><a href="layout/layout.html">Layout</a></li>
+          <li><a href="typography/typography.html">Typography</a></li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <h1>Footer</h1>
       <div class="row fifty">
