--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -29,9 +29,9 @@
       </nav>
     </header>
     <main>
-      <section class="downloads row wide">
+      <section class="row wide">
         <h1>Downloads</h1>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="#!">Sketch Library</a></li>
         </ul>
       </section>
