--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </nav>
     </header>
     <main>
-      <section class="overview row wide">
+      <section class="row wide">
         <h1>Overview</h1>
         <h2><a href="atoms/atoms.html">Atoms</a></h2>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="atoms/alerts/alerts.html">Alerts</a></li>
           <li><a href="atoms/blockquotes/blockquotes.html">Blockquotes</a></li>
           <li><a href="atoms/buttons/buttons.html">Buttons</a></li>
@@ -40,7 +40,7 @@
           <li><a href="atoms/images/images.html">Images</a></li>
         </ul>
         <h2><a href="molecules/molecules.html">Molecules</a></h2>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="molecules/accordions/accordions.html">Accordions</a></li>
           <li><a href="molecules/banners/banners.html">Banners</a></li>
           <li><a href="molecules/cards/cards.html">Cards</a></li>
@@ -48,20 +48,20 @@
           <li><a href="molecules/search/search.html">Search</a></li>
         </ul>
         <h2><a href="organisms/organisms.html">Organisms</a></h2>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="organisms/authentication/authentication.html">Authentication</a></li>
           <li><a href="organisms/footers/footers.html">Footers</a></li>
           <li><a href="organisms/forgot-password/forgot-password.html">Forgot Password</a></li>
           <li><a href="organisms/headers/headers.html">Headers</a></li>
         </ul>
         <h2><a href="style/style.html">Style</a></h2>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="style/colors/colors.html">Colors</a></li>
           <li><a href="style/layout/layout.html">Layout</a></li>
           <li><a href="style/typography/typography.html">Typography</a></li>
         </ul>
         <h2><a href="downloads/downloads.html">Downloads</a></h2>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="#!">Sketch Library</a></li>
         </ul>
       </section>
