--- a/molecules/navigation/navigation.html
+++ b/molecules/navigation/navigation.html
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main>
-      <section class="introduction row wide">
+      <section class="row wide">
         <h1 class="title">Navigation</h1>
         <p>The &lt;nav&gt; element represents a section of a page whose purpose is to provide navigation links, either within the current document or to other documents. Common examples of navigation sections are menus, tables of contents, and indexes.</p>
         <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav" target="_blank">&lt;nav&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
