--- a/style/style.html
+++ b/style/style.html
@@ -29,9 +29,9 @@
       </nav>
     </header>
     <main>
-      <section class="style row wide">
+      <section class="row wide">
         <h1>Style</h1>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="colors/colors.html">Colors</a></li>
           <li><a href="layout/layout.html">Layout</a></li>
           <li><a href="typography/typography.html">Typography</a></li>
