--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -53,7 +53,7 @@
       </nav>
     </header>
     <main>
-      <section class="introduction row wide">
+      <section class="row wide">
         <h1 class="title">Typography</h1>
         <p>Typography expresses hierarchy and enables improved consumption of content. Good typography, by definition, helps content fulfill its purpose of communication.</p>
         <p>There are four essential properties to typography:</p>
@@ -87,7 +87,7 @@
         <p>The other thing the Delta Design System uses to improve legibility and prevent extra long lines of text is use the <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Values_and_units" target="_blank">rem relative unit</a> to define things like font size, margins, and padding. Using rem means that all size is relative to the base <code class="other">&lt;html&gt;</code> element (instead of each individual parent container).</p>
         <p>This helps to ensure that our designs are relative to font or viewport size, meaning that the layout will continue to look correct even if the user drastically increases or decreases the font size via their browser.</p>
       </section>
-      <section class="typography-system row wide">
+      <section class="row wide">
         <h2>Typography System</h2>
         <p>The Delta Design System typography system engineered for semantics, legibility, consistency, flexibility, and simplicity. Too often typography becomes a complex web of customizations, and we want to avoid that situation. Here are some of the basics of the typography system:</p>
         <ul>
@@ -103,7 +103,7 @@
           <li>Do not use heading tags to resize text. Use CSS for general-purpose resizing.</li>
         </ul>
       </section>
-      <section class="typography-specimens row wide">
+      <section class="row wide">
         <h2>Typography Specimens</h2>
         <figure class="column">
           <figcaption>h1 title</figcaption>
