--- a/atoms/atoms.html
+++ b/atoms/atoms.html
@@ -29,9 +29,9 @@
       </nav>
     </header>
     <main>
-      <section class="atoms row wide">
+      <section class="row wide">
         <h1>Atoms</h1>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="alerts/alerts.html">Alerts</a></li>
           <li><a href="blockquotes/blockquotes.html">Blockquotes</a></li>
           <li><a href="buttons/buttons.html">Buttons</a></li>
