--- a/molecules/molecules.html
+++ b/molecules/molecules.html
@@ -29,9 +29,9 @@
       </nav>
     </header>
     <main>
-      <section class="molecules row wide">
+      <section class="row wide">
         <h1>Molecules</h1>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="accordions/accordions.html">Accordions</a></li>
           <li><a href="banners/banners.html">Banners</a></li>
           <li><a href="cards/cards.html">Cards</a></li>
