--- a/organisms/headers/headers.html
+++ b/organisms/headers/headers.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <section class="introduction row wide">
+      <section class="row wide">
         <h1 class="title">Headers</h1>
         <p>The &lt;header&gt; element represents introductory content, typically a group of introductory or navigational aids. It may contain some heading elements but also a logo, a search form, an author name, and other elements.</p>
         <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header" target="_blank">&lt;header&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
