--- a/organisms/organisms.html
+++ b/organisms/organisms.html
@@ -29,9 +29,9 @@
       </nav>
     </header>
     <main>
-      <section class="organisms row wide">
+      <section class="row wide">
         <h1>Organisms</h1>
-        <ul>
+        <ul class="no-bullets">
           <li><a href="authentication/authentication.html">Authentication</a></li>
           <li><a href="footers/footers.html">Footers</a></li>
           <li><a href="forgot-password/forgot-password.html">Forgot Password</a></li>
