--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <section class="introduction row wide">
+      <section class="row wide">
         <h1 class="title">Colors</h1>
         <p>Color plays an important role in brand identity. Color is also a critical component in an accessible design system.</p>
         <p>You can customize the application of color any way you like, but all efforts should be made to ensure for acceptable <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html" target="_blank">accessibility color contrast</a>.</p>
@@ -42,8 +42,9 @@
           <li>Never set link <code>:focus</code> states to <code>outline: none</code>.</li>
         </ul>
       </section>
-      <section class="color-styles row wide">
+      <section class="row wide">
         <h2>Color Styles</h2>
+        <p>Here's how we're currently declaring colors in the Delta Design System:</p>
         <figure>
           <figcaption>scss</figcaption>
 <pre><code>$black: #000000;
