Buttons page added

--- a/assets/snippets/local-or-remote/local.html
+++ b/assets/snippets/local-or-remote/local.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <section class="introduction row wide">
+      <section class="row wide">
       </section>
     </main>
     <footer>
