--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -104,7 +104,7 @@
         </ul>
       </section>
       <section class="row wide">
-        <h2>Typography Specimens</h2>
+        <h2>Typography Examples</h2>
         <figure class="column">
           <figcaption>h1 title</figcaption>
           <p class="header-one title">A quick brown fox jumps over the lazy dog.</p>
