Started form-atoms page and other updates
Added script for show/hide password; simplified Blockquote page layout; updated footer border width.

--- a/atoms/atoms.html
+++ b/atoms/atoms.html
@@ -35,7 +35,7 @@
           <li><a href="alerts/alerts.html">Alerts</a></li>
           <li><a href="blockquotes/blockquotes.html">Blockquotes</a></li>
           <li><a href="buttons/buttons.html">Buttons</a></li>
-          <li><a href="form-elements/form-elements.html">Form Elements</a></li>
+          <li><a href="form-atoms/form-atoms.html">Form Atoms</a></li>
           <li><a href="images/images.html">Images</a></li>
         </ul>
       </section>
