--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li><a href="atoms/alerts/alerts.html">Alerts</a></li>
           <li><a href="atoms/blockquotes/blockquotes.html">Blockquotes</a></li>
           <li><a href="atoms/buttons/buttons.html">Buttons</a></li>
-          <li><a href="atoms/form-elements/form-elements.html">Form Elements</a></li>
+          <li><a href="atoms/form-atoms/form-atoms.html">Form Atoms</a></li>
           <li><a href="atoms/images/images.html">Images</a></li>
         </ul>
         <h2><a href="molecules/molecules.html">Molecules</a></h2>
