--- a/atoms/images/images.html
+++ b/atoms/images/images.html
@@ -63,6 +63,7 @@
           <li>If the image is decorative or redundant to adjacent text, set <code>alt=&quot;&quot;</code>, which conveys to assistive technology users that the image isn't necessary for understanding the page.</li>
           <li>Avoid using generic strings like photo, image, or icon as <code>alt</code> values, as they don't communicate valuable content to the user. Be as descriptive as possible.</li>
         </ul>
+        <p>We will add more options for images in a later phase of development, including options for <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#Art_direction" target="_blank">art direction</a>.</p>
       </section>
     </main>
     <footer>
