--- a/assets/snippets/local-or-remote/local.html
+++ b/assets/snippets/local-or-remote/local.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="../../assets/css/normalize.min.css" rel="stylesheet">
@@ -10,7 +10,7 @@
     <link href="../../assets/css/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
   </head>
-  <body data-aos="fade-in">
+  <body>
     <header>
       <h1>Header</h1>
       <nav aria-labelledby="header-navigation">
@@ -63,11 +63,7 @@
     <script src="../../assets/scripts/jquery.min.js"></script>
     <script src="../../assets/modernizr.min.js"></script>
     <script src="../../assets/scripts/headroom.js"></script>
-    <script src="../../assets/scripts/aos.js"></script>
-    <script src="../../scripts/site.js"></script>
-    <script>
-      AOS.init({duration: 600});
-    </script>
+    <script src="../../assets/scripts/site.js"></script>
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
