--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -7,101 +7,130 @@
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
   </head>
-  <body data-aos="fade-in">
-    <header>
-      <h1>Header</h1>
-      <nav aria-labelledby="header-navigation">
-        <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
-          <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
-          <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
-        </button>
-        <ul>
-          <li><a href="../../index.html">Overview</a></li>
-          <li><a href="../../atoms/atoms.html">Atoms</a></li>
-          <li><a href="../../molecules/molecules.html">Molecules</a></li>
-          <li><a href="../../organisms/organisms.html">Organisms</a></li>
-          <li><a href="../../style/style.html">Style</a></li>
-          <li><a href="../../downloads/downloads.html">Downloads</a></li>
-        </ul>
-      </nav>
-    </header>
+  <body>
     <main>
-      <section class="row wide">
-        <h1 class="title">Colors</h1>
-        <p>Color plays an important role in brand identity. Color is also a critical component in an accessible design system.</p>
-        <p>You can customize the application of color any way you like, but all efforts should be made to ensure for acceptable <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html" target="_blank">accessibility color contrast</a>.</p>
-        <ul>
-          <li>All type is set in <code>$black</code>. Unless&hellip;</li>
-          <li>Type set on a dark background should use <code>$white</code>.</li>
-          <li>Error messages use <code>$error</code> and valid form entries or success messages use <code>$valid</code>.</li>
-          <li>Text link color is set to <code>$primary</code> while <code>:hover</code> and <code>:focus</code> states are set to <code>$secondary</code>.</li>
-          <li>Avoid using color only to communicate information. In the case of links, use another identifier such as bold or underline to indicate a link verses using color alone.</li>
-          <li>Never set link <code>:focus</code> states to <code>outline: none</code>.</li>
-        </ul>
-      </section>
-      <section class="row wide">
-        <h2>Color Styles</h2>
-        <p>Here's how we're currently declaring colors in the Delta Design System:</p>
-        <figure>
-          <figcaption>scss</figcaption>
-<pre><code>$black: #000000;
-$white: #ffffff;
-$dk-gray: #5b5e6b;
-$lt-gray: #e4e8ed;
-$error: #c00c00;
-$valid: #008000;
-$dark-blue: #003442;
-$pale-blue: #4f7272;
-$crimson: #df3a32;
-$cream: #e9eae9;
-$primary: #df3a32;
-$secondary: #003442;</code></pre>
-        </figure>
-      </section>
-    </main>
-    <footer>
-      <h1>Footer</h1>
-      <div class="row fifty">
-        <nav class="column" aria-labelledby="footer-navigation">
-          <ul>
-            <li><a href="../../index.html">Overview</a></li>
-            <li><a href="../../atoms/atoms.html">Atoms</a></li>
-            <li><a href="../../molecules/molecules.html">Molecules</a></li>
-            <li><a href="../../organisms/organisms.html">Organisms</a></li>
-            <li><a href="../../style/style.html">Style</a></li>
-            <li><a href="../../downloads/downloads.html">Downloads</a></li>
-          </ul>
-        </nav>
-        <section class="meta-content column">
-          <div class="logo">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon id="right-side" class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon id="left-side" class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
-            <h1 class="center">The Delta Design System</h1>
-          </div>
-          <div class="github">
-            <a href="https://github.com/cdfournier/delta-design-system" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10z"/></svg></a>
+      <article>
+        <section class="row wide">
+          <div class="column">
+            <h1 class="title">Colors</h1>
+            <p>Color plays an important role in brand identity. Color is also a critical component in an accessible design system.</p>
+            <p>You can customize the application of color any way you like, but all efforts should be made to ensure for acceptable <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html" target="_blank">accessibility color contrast</a>.</p>
+            <ul>
+              <li>All type is set in <code>$black</code>. Unless&hellip;</li>
+              <li>Type set on a dark background should use <code>$white</code>.</li>
+              <li>Error messages use <code>$error</code> and valid form entries or success messages use <code>$valid</code>.</li>
+              <li>Text link color is set to <code>$primary</code> while <code>:hover</code> and <code>:focus</code> states are set to <code>$secondary</code>.</li>
+              <li>Avoid using color only to communicate information. In the case of links, use another identifier such as bold or underline to indicate a link verses using color alone.</li>
+              <li>Never set link <code>:focus</code> states to <code>outline: none</code>.</li>
+            </ul>
           </div>
         </section>
-      </div>
-      <div class="copyright row wide">
-        <p>&copy; 2019 Delta Design System</p>
-      </div>
-    </footer>
+        <section class="row wide">
+          <h2>Color Styles</h2>
+          <p>Here's how we're currently declaring colors in the Delta Design System:</p>
+          <div class="row wide">
+            <div class="column">
+              <h3>Global Colors</h3>
+              <div class="color-card-row">
+                <div class="color-card">
+                  <div class="color-sample bg-black"></div>
+                  <div class="color-values">
+  <pre><code>$black: #000000;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-white" style="border: 1px solid #eeeeee;"></div>
+                  <div class="color-values">
+  <pre><code>$white: #ffffff;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-dk-gray"></div>
+                  <div class="color-values">
+  <pre><code>$dk-gray: #919191;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-md-gray"></div>
+                  <div class="color-values">
+  <pre><code>$md-gray: #cccccc;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-lt-gray"></div>
+                  <div class="color-values">
+  <pre><code>$lt-gray: #eeeeee;</code></pre>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row wide">
+            <div class="column">
+              <h3>Brand Colors</h3>
+              <div class="color-card-row">
+                <div class="color-card">
+                  <div class="color-sample bg-dk-blue"></div>
+                  <div class="color-values">
+  <pre><code>$dk-blue: #003442;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-lt-blue"></div>
+                  <div class="color-values">
+  <pre><code>$lt-blue: #4f7272;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card">
+                  <div class="color-sample bg-crimson"></div>
+                  <div class="color-values">
+  <pre><code>$crimson: #df3a32;</code></pre>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row wide">
+            <div class="column">
+              <h3>System Colors</h3>
+              <div class="color-card-row">
+                <div class="color-card">
+                  <div class="color-sample" style="background-color: #c00c00;"></div>
+                  <div class="color-values">
+  <pre><code>$error: #c00c00;</code></pre>
+                  </div>
+                </div>
+                <div class="color-card" style="margin-bottom: 0;">
+                  <div class="color-sample" style="background-color: #008000;"></div>
+                  <div class="color-values">
+  <pre><code>$valid: #008000;</code></pre>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="row wide">
+          <h2>Color Application</h2>
+          <div class="column">
+            <p>To apply a <code>background-color</code> using any of the defined colors in the system, simply add a <code>.bg-</code> prefix to any of the color declarations above. For example, do make a column's background crimson, add a <code>.bg-crimson</code> to the appropriate tag.</p>
+          </div>
+        </section>
+      </article>
+    </main>
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../../assets/scripts/site.js"></script>
-    <script>
-      AOS.init({duration: 600});
-    </script>
+<!--
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
       headroom.init(); 
     </script>
+-->
   </body>
 </html>
